--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	compile('com.h2database:h2')
 	implementation('javax.xml.bind:jaxb-api:2.3.0')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
