--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,11 @@ dependencies {
     compile('com.h2database:h2')
     implementation('javax.xml.bind:jaxb-api:2.3.0')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
+
+    compile("org.springframework.boot:spring-boot-starter-websocket")
+    compile("org.webjars:webjars-locator-core")
+    compile("org.webjars:sockjs-client:1.0.2")
+    compile("org.webjars:stomp-websocket:2.3.3")
+    
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
