--- a/build.gradle
+++ b/build.gradle
@@ -28,16 +28,16 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.integration:spring-integration-core:5.1.1.RELEASE')
-    compile('org.springframework.integration:spring-integration-mqtt:5.1.1.RELEASE')
-    compile('com.h2database:h2')
+    implementation('org.springframework.integration:spring-integration-core:5.1.1.RELEASE')
+    implementation('org.springframework.integration:spring-integration-mqtt:5.1.1.RELEASE')
+    implementation('com.h2database:h2')
     implementation('javax.xml.bind:jaxb-api:2.3.0')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
 
-    compile("org.springframework.boot:spring-boot-starter-websocket")
-    compile("org.webjars:webjars-locator-core")
-    compile("org.webjars:sockjs-client:1.0.2")
-    compile("org.webjars:stomp-websocket:2.3.3")
+    implementation("org.springframework.boot:spring-boot-starter-websocket")
+    implementation("org.webjars:webjars-locator-core")
+    implementation("org.webjars:sockjs-client:1.0.2")
+    implementation("org.webjars:stomp-websocket:2.3.3")
     
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
